gcc/testsuite/g++.dg/cpp1z/namespace-attribs2.C
// { dg-do compile { target c++17 } }
// { dg-additional-options "-pedantic" }

namespace B [[deprecated]] {} // { dg-error "must precede" }

namespace [[deprecated]] D {}
